A little more elaborate margins, but better to avoid clipping the shadow
Enact-DCO-1.0-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/styles/variables-gallium.less
+++ b/styles/variables-gallium.less
@@ -156,7 +156,7 @@
 @agate-sliderbutton-knob-border-radius: 6px;
 @agate-sliderbutton-knob-border-width: 3px;
 @agate-sliderbutton-knob-transform: scale(1.07, 1.4);
-@agate-sliderbutton-margin: 0 @agate-component-spacing;
+@agate-sliderbutton-margin: 6px 12px 18px 12px;
 
 // Spinner
 // ---------------------------------------
